syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "UserProject";

package nem;


import "google/protobuf/timestamp.proto";

message UserProject {  
    string uuid = 1;
    string user_uuid = 2;
    string user_email = 3;
    string project_uuid = 4;
    UserProjectRole role = 5;
    bool review_required_structure = 6;
    bool review_required_data = 7;
    UserProjectStatus status = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    string created_by_uuid = 11;
    string updated_by_uuid = 12;    
}

enum UserProjectRole { 
    USER_PROJECT_ROLE_INVALID = 0;
    USER_PROJECT_ROLE_ADMIN = 1;
    USER_PROJECT_ROLE_DEVELOPER = 2;
    USER_PROJECT_ROLE_DATA_MANAGER = 3;
    USER_PROJECT_ROLE_DATA_ANALYST = 4;
    USER_PROJECT_ROLE_VIEWER = 5;
}

enum UserProjectStatus { 
    USER_PROJECT_STATUS_INVALID = 0;
    USER_PROJECT_STATUS_ACTIVE = 1;
    USER_PROJECT_STATUS_DISABLED = 2;
}
